<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroTest</string>
    <string name="app_test">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="nameService">AutoWallpapers</string>
    <string name="startService">Start Wallpapers management</string>
    <string name="stopService">Stop Wallpapers management</string>
    <string name="hideService">Hide</string>
    
    <string name="saveButtonText">Save</string>
    <string name="loadButtonText">Load</string>
    
    <string name="buttonTest1_text">Test1</string>
    <string name="buttonTest2_text">Test2</string>
    <string name="buttonTest3_text">Test3</string>
    <string name="buttonTest4_text">Test4</string>
    <string name="buttonTest5_text">Test5</string>
    <string name="buttonTest6_text">Test6</string>
    <string name="buttonTest7_text">Test7</string>
    <string name="buttonTest8_text">Test8</string>
    <string name="buttonTest9_text">Test9</string>    
</resources>
